--- a/src/Components/body/body.css
+++ b/src/Components/body/body.css
@@ -6,6 +6,7 @@
 .col h1 {
     font-size: 64px;
     letter-spacing: -.3rem;
+    line-height: 4rem;
     font-weight: bold;
 }
 
@@ -14,17 +15,11 @@
 }
 
 #body-img-1 {
-    width: 90%;
-    height: 60%;
+    width: 100%;
+    height: 1110%;
 }
 
 #body-img-2 {
     width: 90%;
     height: 20%;
-}
-
-#btn-adotar, #btn-doar {
-    width: 47%;
-    height: 10%;
-    border-color: black;
 }
