componente "Btn" adicionado (não implementado)

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,6 @@
     color: black !important;
     background-color: #F0F7DA !important;
 }
+
+/*remover esse codigo e implementar o componente "Btn"*/
+/*elaborar padroes pre-definidos para o tamanho dos botoes*/
